--- a/misc/CHANGELOG.txt
+++ b/misc/CHANGELOG.txt
@@ -16,12 +16,14 @@
       # In lieu of the latest emergency release and the manual notification
         of the required upgrade, code has now been implemented to automate
         this in the future. Clients now make an explicit version check against
-        the server, which will pop and informational dialogue and forced
+        the server, which will pop an informational dialogue and forced
         exit if the user's version is insufficient.
       # The first user-faching "revision filter" has been installed in the
         "filter" menu. There, users can choose whether edits comittted by
         privileged users (i.e., sysops, reviewers, and rollbackers) should
         be displayed in the GUI.
+      # A bug whereby mnemonic usage could result in duplicate 
+        classifications has been fixed. (T#030)
   
   * 2013-08-19
       # EMERGENCY RELEASE: The following security change by WMF developers:
