--- a/misc/CHANGELOG.txt
+++ b/misc/CHANGELOG.txt
@@ -12,6 +12,10 @@
   formal version number (e.g., 2.1) is in too many places to be 
   conveniently altered for small changes:
   
+  * 2013-XX-XX
+      # Plurality switches ("#s#") were added to make default AGF messages
+        more customized to specific revert cirumstances. 
+  
   * 2013-11-30
       # The "user talk" link which appears in the "metadata" and "last 
         revert" panels has been modified so it is appropriately blue/red 
