--- a/misc/CHANGELOG.txt
+++ b/misc/CHANGELOG.txt
@@ -12,15 +12,17 @@
   formal version number (e.g., 2.1) is in too many places to be 
   conveniently altered for small changes:
   
-  * 2014-XX-XX
-      # As per user request, larger font size options were made available
+  * 2014-02-04
+      # The colors and font faces used in the diff presentation panel can
+        now be changed via the "options" menu (T#037).
+      # Per user request, larger font size options were made available (T#035).
       # Plurality switches ("#s#") are now utilized in the default AGF 
         messages, making them more customized to specific revert 
         cirumstances. Articles are also now linked in default AGF messages.
       # The WMF changed diff representation format, sending our
         parser into infinite loops on the back-end; eventually exhausting
-        threads and halting edit ingestion. On the front-end, this
-        caused some diffs to be mis-colored. The parser was fixed.
+        threads and halting edit ingestion. On the front-end, this caused 
+        some diffs to be mis-colored. The parser was fixed in both cases.
   
   * 2013-11-30
       # The "user talk" link which appears in the "metadata" and "last 
