--- a/misc/CHANGELOG.txt
+++ b/misc/CHANGELOG.txt
@@ -13,24 +13,28 @@
   conveniently altered for small changes:
   
   * 2014-XX-XX
-      # Due to an WMF API change, we were forced to change the way user
-        edit counts were performed. The WMF changed the way pagination is done,
-        breaking our earlier parser in some cases. This code was used to 
-        determine STiki permissions (>1000 edits) and in "don't template 
-        the regulars" logic.
+      # The "Options" menu now has setting that allows clients to be notified
+        via pop-up if an AIV post has been lodged (T#018; T#046).
+      # Null diffs should no longer be displayed (T#038). This was a bug
+        introduced when STiki enabled custom color options for users.
+      # Users will not be displayed their own edits from the queues, as this
+        is a conflict of interest (T#043).
       # More AGF messages were added, including some pulled in from a GitHub
         merge (our first community code contribution!). Some category
         labels were pre-pended to help better manage this growing list.
         The code copy was also synced with community copy at:
         http://en.wikipedia.org/wiki/WP:STiki/Good-faith-revert_messages
-      # Null diffs should no longer be displayed (T#038). This was a bug
-        introduced when STiki enabled custom color options for users.
-      # Users will not be displayed their own edits from the queues, as this
-        is a conflict of interest (T#043).
+      # Metadata panel content now has "mouseover" support. In particular,
+        this should permit the full display of comments which are truncated
+        because they are too lengthy to fit in the fixed-size placeholder.
+      # Due to an WMF API change, we were forced to change the way user
+        edit counts are performed. The WMF changed the way pagination is done,
+        breaking our earlier parser in some cases. This code was used to 
+        determine STiki permissions (>1000 NS0 edits), "don't template 
+        the regulars" logic, and non-critical aspects of milestone reporting.
+      # Minor improvements to warning increment logic; in particular, better
+        handling when duplicate section headers exist.
         
-      = Investigate mouseover to show full edit comments when lengthy
-  
-  
   * 2014-03-25
       # Emergency release in order to fix login code broken by a small
         WMF change (most of the burden probably falls to STiki for getting
