--- a/misc/CHANGELOG.txt
+++ b/misc/CHANGELOG.txt
@@ -30,7 +30,9 @@
       # A "small numerical edits" filter has been created. Sometimes
         monotonous and difficult to casually assess, this filter can allow
         users to skip edits where "only a single numerical value is changed,
-        and the magnitude of that change is (0.5 < change < 2.0)" (T#049). 
+        and the magnitude of that change is (0.5 < change < 2.0)" (T#049).
+      # Additional watchlisting options (reverts/warns/both/prefences/never), 
+        are now accessible via a ndrop-down menu in the login panel(T#042). 
       # Additional user/article-talk links added to metadata panel (T#036).
       # Remove reference to "editing anonymously" in login dialog (T#044).  
       # The "don't template the regulars" option/dialog was re-focused such
