Transition "http" -> "https" for all WP/WMF URLs

--- a/misc/CHANGELOG.txt
+++ b/misc/CHANGELOG.txt
@@ -12,10 +12,13 @@
   formal version number (e.g., 2.1) is in too many places to be 
   conveniently altered for small changes:
   
-  * 2015-XX-XX
+  * 2015-06-13 - EMERGENCY RELEASE
+  		# The WMF now requires all communication to be HTTPS. While STiki has 
+  		  long had an HTTPS option, for those that did not have it enabled, 
+  		  all API requests began failing when the change was initiated. STiki
+  		  now uses HTTPS only and the option has been removed from the menu.
       # Resolved issue where custom AGF messages were not saving and 
         persisting between edits/sessions (T#051).
-      # Test comment
   
   * 2014-12-12
       # Something seems to have changed with the way Mediawiki parses 
