T#055: Put "thank" button in metadata panel

--- a/misc/CHANGELOG.txt
+++ b/misc/CHANGELOG.txt
@@ -16,14 +16,23 @@
   		# The "ignore" button (adjacent to the "user" line of the "metadata" 
   			panel) allows a session-long ignore from edits made by a particular
   			user (e.g., repeated maintenance tasks that are not vandalism). 
-  			The ignore list resets when STiki is restarted (T#053). 
+  			The ignore list resets when STiki is restarted. A link color change
+  			from blue->red indicates action success (T#053). 
+  		# Implemented API "thank" functionality. A revision/editor can be
+  			"thanked" by using the button adjacent to the "REVISION_ID" line
+  			of the "metadata" panel. A link color change from blue->red indicates
+  			action success. "Thanking" is tied to specific revision-ids,
+  			justifying this placement. It was not made an explicit classification
+  			button and tied to the "innocent" outcome as such a promotion seems
+  			like mission-creep for an anti-vandalism tool (T#055).
   		# The fact an article is CSD ("candidate for speedy deletion") can now
-  			be noted atop diffs. Functionality is enabled by default, but 
-  			can be turned off via the "options" menu (T#052)
-  		# Implemented API "thank" functionality (T#055)
-  		# First attempt at solving MacOS GUI layout issues. Seemed to stem
-  			from the fact MacOS enforces a border on JButtons (T#054)
-  		# Minor change w.r.t. to height of "watchlist options" drop-down
+  			be noted atop diffs, similar to how the "this will rollback 'n' edits"
+  			note appears. This functionality is enabled by default, but can be 
+  			turned off via the "options" menu (T#052).
+  		# First attempt at solving MacOS GUI layout issues. These seemed to stem
+  			from the fact MacOS enforces a border on JButtons (T#054).
+  		# Minor change w.r.t. to height of "watchlist options" drop-down,
+  			which seems to have no default minimum height
   		# Minor change to make login error messages more descriptive
   
   * 2016-02-12 - EMERGENCY RELEASE
